# kanki

./: .gitmodules  CMakeLists.txt  collection.txt  docker-compose.yml  readme.md  sessions.txt
.github/workflows/: cmake.yml
assets/: .gitignore  collection.txt  kanki.cfg  session.txt
docs/: readme1.md  readme2.md  readme3.md
docs/diagrams/: components.drawio  er.drawio  uml.drawio  uml_v2.drawio  use_case.drawio
docs/tasks/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md
src/: main.cpp
src/cli/: application.cpp  application.hpp  menu.cpp  menu.hpp
src/cli/view/: editorview.cpp  editorview.hpp  ioview.hpp  learnerview.cpp  learnerview.hpp
src/core/: cardcontroller.cpp  cardcontroller.hpp  collectioncontroller.cpp  collectioncontroller.hpp  collectionexporter.cpp  collectionexporter.hpp  collectionmanager.cpp  collectionmanager.hpp  controllerprovider.cpp  controllerprovider.hpp  deckcontroller.cpp  deckcontroller.hpp  editorcontroller.cpp  editorcontroller.hpp  icollectionmanager.hpp  icollectionrepository.hpp  ieditorview.hpp  iestimator.hpp  iestimatorstrategy.hpp  iexporter.hpp  iimporter.hpp  iioview.hpp  ilearner.hpp  ilearnerview.hpp  ilearnstategy.hpp  imodelmanager.hpp  iocontroller.cpp  iocontroller.hpp  isessionmanager.hpp  isessionrepository.hpp  learnercontroller.cpp  learnercontroller.hpp  modelmanager.cpp  modelmanager.hpp  sessionmanager.cpp  sessionmanager.hpp  spacedestimator.cpp  spacedestimator.hpp  spacedlearner.cpp  spacedlearner.hpp  (+4 more)
src/db/: filecollectionrepo.cpp  filecollectionrepo.hpp  filedtoiofactory.cpp  filedtoiofactory.hpp  fileexporter.cpp  fileexporter.hpp  fileimporter.cpp  fileimporter.hpp  filereader.cpp  filereader.hpp  filerepofactory.cpp  filerepofactory.hpp  filesessionrepo.cpp  filesessionrepo.hpp  filewriter.cpp  filewriter.hpp  idbiofactory.hpp  idbreader.hpp  idbwriter.hpp  idtoiofactory.hpp  idtoreader.hpp  idtowriter.hpp
src/db/model/: card.hpp  collection.hpp  collectionbuilder.cpp  collectionbuilder.hpp  collectionparser.cpp  collectionparser.hpp  deck.hpp  session.hpp  sessionbuilder.cpp  sessionbuilder.hpp  sessionparser.cpp  sessionparser.hpp  snapshot.hpp
src/db/redis/: rediscollectionrepo.cpp  rediscollectionrepo.hpp
src/dbapi/: cardinfo.hpp  collectioninfo.hpp  deckinfo.hpp  icollectionrepo.hpp  irepofactory.hpp  isessionrepo.hpp  modeladapter.cpp  modeladapter.hpp  sessionadapter.cpp  sessionadapter.hpp  sessioninfo.hpp  snapshotinfo.hpp
src/dto/: card.hpp  collection.hpp  collectionbuilder.cpp  collectionparser.cpp  collectionparser.hpp  deck.hpp  dtocollectionbuilder.cpp  dtocollectionbuilder.hpp  dtoparser.cpp  dtoparser.hpp  session.hpp  sessionbuilder.cpp  sessionbuilder.hpp  sessionparser.cpp  sessionparser.hpp  snapshot.hpp
src/model/: card.cpp  card.hpp  cardsnapshot.cpp  cardsnapshot.hpp  collection.cpp  collection.hpp  deck.cpp  deck.hpp  deckcollection.cpp  deckcollection.hpp  session.cpp  session.hpp  snapshot.cpp  snapshot.hpp
src/solution/: cfgsolution.cpp  cfgsolution.hpp  solution.cpp  solution.hpp
src/tools/: convertor.cpp  convertor.hpp  idgenerator.hpp  imp_tokenmap.hpp  logger.cpp  logger.hpp  time.hpp  token.cpp  token.hpp  tokenmap.hpp  uuid.hpp
src/ui/: card_window.cpp  card_window.hpp  card_window.ui  cardview_widget.cpp  cardview_widget.hpp  deck_window.cpp  deck_window.hpp  iuifactory.cpp  iuifactory.hpp  learn_window.ui  main_window.cpp  main_window.hpp  main_window.ui  qtcardview.cpp  qtcardview.hpp  qtcollectionview.cpp  qtcollectionview.hpp  qtdeckview.cpp  qtdeckview.hpp  qteditorview.cpp  qteditorview.hpp  ui_card_window.h  ui_deck_window.h  ui_learn_window.h  ui_main_window.h
src/ui/cli/: application.cpp  application.hpp  editorview.cpp  editorview.hpp  ioview.cpp  ioview.hpp  learnerview.cpp  learnerview.hpp  uifactory.cpp  uifactory.hpp
src/ui/editor/: card_window.cpp  card_window.hpp  cardview_widget.cpp  cardview_widget.hpp  cardview_widget.ui  deck_window.cpp  deck_window.hpp  deck_window.ui  qteditorview.cpp  qteditorview.hpp
src/ui/learn/: info_window.cpp  info_window.hpp  info_window.ui  learn_window.cpp  learn_window.hpp  learn_window.ui  qtlearnerview.cpp  qtlearnerview.hpp  repeat_window.ui  ui_learn_window.h
src/ui/model/: convertor.cpp  convertor.hpp  deckparams.hpp  editoradapter.cpp  ioviewadapter.cpp  learneradapter.cpp
src/ui/qt/: main_window.cpp  main_window.hpp  main_window.ui  qtioview.cpp  qtioview.hpp  qtuifactory.cpp  qtuifactory.hpp
src/view/: cardparams.hpp  collectionparams.hpp  convertor.cpp  convertor.hpp  deckparams.hpp  editoradapter.cpp  editordapter.hpp  ioviewadapter.cpp  ioviewadapter.hpp  learneradapter.hpp  uieditorview.hpp  uiioview.hpp  uilearnerview.hpp
src/viewapi/: cardparams.cpp  cardparams.hpp  collectionparams.cpp  collectionparams.hpp  deckparams.cpp  deckparams.hpp  icardview.hpp  icollectionview.hpp  ideckview.hpp
tests/builders/: builder_base.cpp  builder_base.hpp  cardbuilder.hpp  collectionbuilder.hpp  deckbuilder.cpp  deckbuilder.hpp  snapshotbuilder.cpp  snapshotbuilder.hpp
tests/e2e/: editorcontroller.cpp  editorcontroller_fixture.hpp
tests/integration/: collectionmanager.cpp  redis_integration_fixture.hpp
tests/integration/redis/: rediscollectionrepo.cpp
tests/mock/core/: collectionmanager.hpp  estimator.hpp
tests/mock/db/: dtoreader.hpp
tests/unit/core/: spacedestimator.cpp  spacedlearner.cpp  spacedlearner_fixture.hpp
tests/unit/db/: filecollectionrepo.cpp
unit_tests/: main.cpp
unit_tests/builders/: builder_base.cpp  cardbuilder.cpp  collectionbuilder.cpp  deckbuilder.hpp
unit_tests/core/: editorcontroller.cpp  mockmodelmanager.hpp  mockrepofactory.hpp  spacedestimator.cpp  spacedlearner.cpp  spacedreptests.cpp
unit_tests/db/: filecollectionrepo.cpp
unit_tests/db/redis/: redis_fixture.hpp  rediscollectionrepo.cpp
unit_tests/mock/: collectionmanager.hpp  learner.hpp  learnerview.hpp  sessionmanager.hpp
unit_tests/mock/core/: collectionmanager.hpp
unit_tests/mock/db/: dtoiofactory.hpp  dtoreader.cpp  dtoreader.hpp  dtowriter.cpp  dtowriter.hpp
(+20 files in other folders)
